This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

09-Apr-2002 (Lars Duening)  (3.3.439)
  - (efuns.c, strfuns, func_spec) Efuns filter() and map() can be used on
       strings.

09-Apr-2002 (Lars Duening)  (3.3.438)
  - (heartbeat.c) Removed the pooled allocation of heartbeat structures:
       Muds have spikes of high callout usage, but a low usage over
       the longterm average, so most of the pooled structures are not
       used. This more than makes up for any malloc overhead saved
       by the pooled allocation.
  - (heartbeat.c) Errors in a heartbeat execution now longer aborts
       the whole heartbeat cycle (suggested by Baba).
  - (efuns.c, main, mudlib/sys/debug_info.h) The boot time is now
       available through debug_info(DINFO_DATA, DID_STATUS).
  - (wizlist) The wizlist now accounts the evalcost split into
       ticks and gigaticks, to be able to handle long uptimes, and also
       offer a non-decaying total sum of the evalcosts (suggested by
       Baba).

07-Apr-2002 (Lars Duening)  (3.3.437)
  - (mud/lp-245) Adapted the set_this_object() usage in the master.
  - (actions.c) Efun remove_action() can now remove all actions defined
      by an object (suggested by Menaures).

04-Apr-2002 (Lars Duening)  (3.3.436)
  - (structs.c) When remove_unreferenced_struct() freed the structs, it
      forgot to properly mark the memory blocks as 'allocated', so that
      the final sweep phase of the GC tried to free them again (reported
      by Nostradamus).

30-Mar-2002 (Lars Duening)  (3.3.435)
  - (comm.c) The driver now logs the pathname of the ERQ executable
      it attempts to start.

29-Mar-2002 (Lars Duening)  (3.3.434)
  - (config.h.in) The options MALLOC_CHECK and MALLOC_SBRK got mixed up.
  - (gcollect.c) The cleanup code didn't remove the program from the swap
      when it zeroed out a reference to a destructed blueprint. Later GCs